--- a/v0/app/build.gradle
+++ b/v0/app/build.gradle
@@ -14,11 +14,15 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "ubb.license.david.monumentalv0"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        resValue 'string', 'google_maps_key', MapsAPIKey
+        resValue 'string', 'fence_api_key', FenceAPIKey
+        resValue 'string', 'facebook_app_id', FacebookAppID
     }
 
     buildTypes {
@@ -26,11 +30,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-
-    buildTypes.each {
-        it.buildConfigField 'String', 'FENCE_API_KEY', FenceAPIKey
-        it.buildConfigField 'String', 'FACEBOOK_APP_ID', FacebookAppID
     }
 }
 
@@ -44,18 +43,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha03'
+
+    // Google play services
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-
-    // Navigation
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
-    implementation "android.arch.navigation:navigation-ui:1.0.0-beta02"
-
-
-    // Lifecycle
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    kapt "android.arch.lifecycle:compiler:1.1.1"
 
     // Firebase
     implementation 'com.google.firebase:firebase-database:16.0.6'
@@ -68,6 +62,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
     implementation 'com.facebook.android:facebook-login:4.40.0'
+
+    // Navigation
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
+    implementation "android.arch.navigation:navigation-ui:1.0.0-beta02"
+
+    // Lifecycle
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
 
     // Anko
     implementation "org.jetbrains.anko:anko:0.10.8"
