--- a/v0/app/src/main/AndroidManifest.xml
+++ b/v0/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
             android:name=".BaseApplication"
@@ -45,13 +46,20 @@
                 android:label="@string/app_name" />
 
         <activity
-                android:name=".ui.home.HomeActivity"
-                android:label="@string/title_activity_home"
+                android:name=".ui.MainActivity"
                 android:theme="@style/AppTheme.NoActionBar"
+                android:label="@string/title_activity_home"
                 android:screenOrientation="portrait"
                 android:configChanges="orientation|keyboardHidden"
                 android:parentActivityName=".ui.LoginActivity">
         </activity>
+
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version" />
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key" />
 
     </application>
 </manifest>
