--- a/v0/app/build.gradle
+++ b/v0/app/build.gradle
@@ -45,16 +45,17 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'androidx.annotation:annotation:1.0.2'
 
     // Google play services
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-database:16.0.6'
-    implementation 'com.google.firebase:firebase-firestore:18.0.1'
-    implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
 
     // Authentication
@@ -64,8 +65,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.40.0'
 
     // Navigation
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
-    implementation "android.arch.navigation:navigation-ui:1.0.0-beta02"
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
+    implementation "android.arch.navigation:navigation-ui:1.0.0-rc02"
 
     // Lifecycle
     implementation "android.arch.lifecycle:extensions:1.1.1"
@@ -79,10 +80,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
     // Room components
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
-    implementation 'androidx.annotation:annotation:1.0.1'
-    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "androidx.room:room-runtime:2.1.0-alpha04"
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha04'
+    kapt "androidx.room:room-compiler:2.1.0-alpha04"
 
     // Testing
     testImplementation 'junit:junit:4.12'
