--- a/v0/foursquareApi/build.gradle
+++ b/v0/foursquareApi/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+
+    // Logging requests
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 }
 
 sourceCompatibility = "7"
