--- a/v0/app/build.gradle
+++ b/v0/app/build.gradle
@@ -12,17 +12,21 @@ apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "ubb.license.david.monumentalv0"
+
         minSdkVersion 23
         targetSdkVersion 28
+
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         resValue 'string', 'google_maps_key', MapsAPIKey
         resValue 'string', 'fence_api_key', FenceAPIKey
         resValue 'string', 'facebook_app_id', FacebookAppID
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -45,44 +49,43 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 
     // Google play services
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-database:16.1.0'
-    implementation 'com.google.firebase:firebase-firestore:18.1.0'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
 
     // Authentication
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
     implementation 'com.facebook.android:facebook-login:4.40.0'
-
-    // Navigation
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
-    implementation "android.arch.navigation:navigation-ui:1.0.0-rc02"
-
-    // Lifecycle
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    kapt "android.arch.lifecycle:compiler:1.1.1"
-
-    // Anko
-    implementation "org.jetbrains.anko:anko:0.10.8"
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
-    // Room components
+    // Room
     implementation "androidx.room:room-runtime:2.1.0-alpha04"
     implementation 'androidx.room:room-rxjava2:2.1.0-alpha04'
     kapt "androidx.room:room-compiler:2.1.0-alpha04"
+
+    // Lifecycle
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+
+    // Navigation
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
+    implementation "android.arch.navigation:navigation-ui:1.0.0-rc02"
+
+    // Anko
+    implementation "org.jetbrains.anko:anko:0.10.8"
 
     // Testing
     testImplementation 'junit:junit:4.12'
@@ -90,3 +93,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 }
+
