--- a/v0/build.gradle
+++ b/v0/build.gradle
@@ -1,21 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '1.3.21'
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Google Play Services
         classpath 'com.google.gms:google-services:4.2.0'
 
         // Safe arguments for navigation components
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-beta02"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-rc02"
     }
 }
 
@@ -23,7 +22,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
