--- a/v0/foursquareApi/build.gradle
+++ b/v0/foursquareApi/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     //noinspection DifferentStdlibGradleVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
@@ -11,7 +12,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
 
-    // Logging requests
+    // OkHttpLogging
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 }
 
@@ -20,9 +21,11 @@ targetCompatibility = "7"
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
