--- a/Final/data/build.gradle
+++ b/Final/data/build.gradle
@@ -32,14 +32,14 @@ dependencies {
     api project(':domain')
 
     // Room
-    implementation "androidx.room:room-runtime:2.1.0-alpha07"
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha07'
-    kapt "androidx.room:room-compiler:2.1.0-alpha07"
+    implementation "androidx.room:room-runtime:2.1.0-beta01"
+    implementation 'androidx.room:room-rxjava2:2.1.0-beta01'
+    kapt "androidx.room:room-compiler:2.1.0-beta01"
 
     // Firebase
-    implementation 'com.google.firebase:firebase-storage:16.1.0'
-    implementation 'com.google.firebase:firebase-firestore:18.2.0'
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
 
     // Lifecycle
     api "android.arch.lifecycle:extensions:1.1.1"
