--- a/Final/data/build.gradle
+++ b/Final/data/build.gradle
@@ -32,18 +32,18 @@ dependencies {
     api project(':domain')
 
     // Room
-    implementation "androidx.room:room-runtime:2.1.0-beta01"
-    implementation 'androidx.room:room-rxjava2:2.1.0-beta01'
-    kapt "androidx.room:room-compiler:2.1.0-beta01"
+    implementation "androidx.room:room-runtime:2.1.0-rc01"
+    implementation 'androidx.room:room-rxjava2:2.1.0-rc01'
+    kapt "androidx.room:room-compiler:2.1.0-rc01"
 
     // Firebase
     implementation 'com.google.firebase:firebase-storage:17.0.0'
-    implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
 
     // Lifecycle
-    api "android.arch.lifecycle:extensions:1.1.1"
-    kapt "android.arch.lifecycle:compiler:1.1.1"
+    api "android.arch.lifecycle:extensions:2.1.0-alpha01"
+    kapt "android.arch.lifecycle:compiler:2.1.0-alpha01"
 
     // Anko
     api "org.jetbrains.anko:anko:0.10.8"
