--- a/Final/presentation/build.gradle
+++ b/Final/presentation/build.gradle
@@ -77,9 +77,10 @@ dependencies {
 //    implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     // Testing
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 }
-
