--- a/Final/presentation/src/main/AndroidManifest.xml
+++ b/Final/presentation/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 android:name=".HostActivity"
                 android:theme="@style/AppTheme.NoActionBar"
                 android:configChanges="orientation|keyboardHidden"
-                android:screenOrientation="portrait">
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
