--- a/Final/presentation/src/main/AndroidManifest.xml
+++ b/Final/presentation/src/main/AndroidManifest.xml
@@ -3,11 +3,16 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="ubb.thesis.david.monumental">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature
+            android:name="android.hardware.camera2"
+            android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
             android:name=".BaseApplication"
@@ -24,18 +29,20 @@
                 android:configChanges="orientation|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <!-- Facebook authentication -->
         <activity
                 android:name="com.facebook.FacebookActivity"
                 android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                android:label="@string/app_name"/>
+                android:label="@string/app_name" />
 
 
         <!-- Geofencing -->
@@ -43,27 +50,40 @@
                 android:name=".geofencing.GeofenceTransitionsService"
                 android:exported="true"
                 android:enabled="true"
-                android:permission="android.permission.BIND_JOB_SERVICE"/>
+                android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <receiver android:name=".geofencing.GeofenceBroadcastReceiver"
-                  android:exported="true"
-                  android:enabled="true"
-                  tools:ignore="ExportedReceiver"/>
+        <receiver
+                android:name=".geofencing.GeofenceBroadcastReceiver"
+                android:exported="true"
+                android:enabled="true"
+                tools:ignore="ExportedReceiver" />
 
+        <!-- Image cache content provider -->
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="ubb.thesis.david.monumental"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths" />
+        </provider>
 
         <!-- API keys metadata -->
         <meta-data
                 android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version"/>
+                android:value="@integer/google_play_services_version" />
         <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/facebook_app_id"/>
+                android:value="@string/facebook_app_id" />
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="@string/google_maps_key"/>
+                android:value="@string/google_maps_key" />
 
         <!-- Official (temporary) workaround for a google play services bug causing maps rendering issues -->
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <uses-library
+                android:name="org.apache.http.legacy"
+                android:required="false" />
 
     </application>
 </manifest>
