--- a/Final/build.gradle
+++ b/Final/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
@@ -16,6 +16,9 @@ buildscript {
 
         // Google Play Services
         classpath 'com.google.gms:google-services:4.2.0'
+
+        // Crashlytics plugin
+        classpath 'io.fabric.tools:gradle:1.29.0'
 
         // Safe arguments for navigation components
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
