--- a/Final/presentation/build.gradle
+++ b/Final/presentation/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
@@ -62,7 +63,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
-    // Third part authentication
+    // Third party authentication
     implementation 'com.facebook.android:facebook-login:4.40.0'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
 
@@ -76,8 +77,9 @@ dependencies {
     // Data binding adapters
     kapt "com.android.databinding:compiler:$android_plugin_version"
 
-    // Stylized toast messages
-//    implementation 'com.github.GrenderG:Toasty:1.4.2'
+    // Crashlytics
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Testing
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
